--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -35,13 +35,13 @@
   .title-prefix {
     font-size: 1.8rem;
     font-weight: 500;
+    margin-right: 8px;
   }
   
   .typing-text {
     font-size: 1.8rem;
     font-weight: 700;
     color: var(--secondary-color);
-    margin-left: 8px;
   }
   
   .cursor {
